# riscv_comp

./: .gitignore  CMakeLists.txt  README.md  spec.md
.github/workflows/: cmake-single-platform.yml
include/: comp.hpp  compdevices.hpp  consts.hpp  cpu.hpp  instructions.hpp  ram.hpp  rv32c.hpp  rv32i.hpp  syscall.hpp  timer.hpp  utils.hpp
sample_c/: _start.s  build.sh  get_starting_addr.py  linker_script.ld  sample_c.c  syscall.h  test.elf  test.elf.disasm
src/: comp.cpp  cpu.cpp  instructions.cpp  main.cpp  ram.cpp  rv32c.cpp  rv32i.cpp  syscall.cpp  timer.cpp  utils.cpp
tests/: test_instructions.cpp  test_ram.cpp  test_rv32c.cpp  test_rv32i.cpp  test_utils.cpp
